--- a/main.css
+++ b/main.css
@@ -57,7 +57,7 @@ p {
   font-size: 22px;
   cursor: default;
   animation: loadIn 8s forwards cubic-bezier(0.02, 0.8, 0.2, 1) 0.5s;
-  -webkit-animation: loadIn 8s forwards cubic-bezier(0.02, 0.8, 0.2, 1) 0.5s;
+  -webkit-animation: loadIn 8s forwards cubic-bezier(0.02, 0.8, 0.2, 1) 2s;
   opacity: 0;
 }
 
@@ -116,6 +116,13 @@ a:hover {
 @media (max-width: 450px) {
   p {
     max-width: 600px;
-    font-size: 16px;
+    font-size: 19px;
+  }
+
+  a,
+  p {
+    letter-spacing: -0rem;
+    /* transition: opacity 0.3s; */
+    /* -webkit-transition: opacity 0.1s; */
   }
 }
