--- a/main.css
+++ b/main.css
@@ -53,19 +53,19 @@ html {
 
 p {
   margin: 30px 30px 30px 30px;
-  max-width: 600px;
+  max-width: 550px;
   font-size: 22px;
   cursor: default;
-  animation: loadIn 8s forwards cubic-bezier(0.02, 0.8, 0.2, 1) 0.5s;
-  -webkit-animation: loadIn 8s forwards cubic-bezier(0.02, 0.8, 0.2, 1) 2s;
+  animation: loadIn 0.5s forwards linear 0s;
+  -webkit-animation: loadIn 0.5s forwards linear 0s;
   opacity: 0;
 }
 
 a,
 p {
-  letter-spacing: -0.02rem;
-  /* transition: opacity 0.3s; */
-  /* -webkit-transition: opacity 0.1s; */
+  letter-spacing: -0.007rem;
+  transition: opacity 0.2s;
+  -webkit-transition: opacity 0.2s;
 }
 
 a {
