--- a/main.css
+++ b/main.css
@@ -29,10 +29,16 @@ html {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   font-family: NBAkademie-Regular, sans-serif;
-  overflow: hidden;
+  /* overflow: hidden; */
+  background: linear-gradient(122.18deg, #c0c0c0 8.01%, #a6a6c2 95.95%);
+  background-size: cover;
+  min-width: 100vw;
+  min-height: 100vh;
 }
 
 body {
+  overflow-x: hidden;
+  *overflow-y: hidden;
   background: linear-gradient(122.18deg, #c0c0c0 8.01%, #a6a6c2 95.95%);
   background-size: cover;
   min-width: 100vw;
@@ -122,10 +128,9 @@ a:hover {
 @media (max-width: 450px) {
   html {
     overflow: visible;
-  }
-  body {
     min-height: 100%;
   }
+
   p {
     max-width: 600px;
     font-size: 19px;
