--- a/main.css
+++ b/main.css
@@ -36,14 +36,6 @@ html {
   min-height: 100vh;
   z-index: -1;
 }
-/* 
-body {
-  
-  background-size: cover;
-  min-width: 100vw;
-  min-height: 100vh;
-  z-index: -1;
-} */
 
 ::selection {
   color: none;
@@ -56,7 +48,7 @@ body {
 }
 
 p {
-  margin: 30px 30px 30px 30px;
+  padding: 30px 30px 30px 30px;
   max-width: 600px;
   font-size: 22px;
   cursor: default;
@@ -134,6 +126,14 @@ a:hover {
   p {
     max-width: 600px;
     font-size: 19px;
+  }
+
+  .wrap {
+    display: none;
+  }
+
+  .ball {
+    display: none;
   }
 
   a:hover {
