--- a/main.css
+++ b/main.css
@@ -110,6 +110,22 @@ a:hover {
   filter: blur(200px);
 }
 
+.footer {
+  bottom: 0;
+  right: 0;
+  position: fixed;
+}
+
+.footer a {
+  text-decoration: none;
+  opacity: 0.1;
+  transition: opacity 0.5s;
+}
+
+.footer a:hover {
+  opacity: 1;
+}
+
 @keyframes loadIn {
   0% {
     opacity: 0;
