--- a/main.css
+++ b/main.css
@@ -29,12 +29,16 @@ html {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   font-family: NBAkademie-Regular, sans-serif;
-  overflow: hidden;
+  /* overflow: hidden; */
   background: linear-gradient(122.18deg, #c0c0c0 8.01%, #a6a6c2 95.95%);
   background-size: cover;
   min-width: 100vw;
   min-height: 100vh;
   z-index: -1;
+}
+
+body {
+  min-height: 100vh;
 }
 
 ::selection {
@@ -79,9 +83,10 @@ a:hover {
   left: 0;
   bottom: 0;
   right: 0;
-  overflow: hidden;
+  overflow-x: hidden;
+  /* overflow-y: scroll; */
   pointer-events: none;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 #ball {
