--- a/main.css
+++ b/main.css
@@ -177,6 +177,7 @@ a:hover {
   a,
   p {
     letter-spacing: -0rem;
+    font-size: 18px;
     /* transition: opacity 0.3s; */
     /* -webkit-transition: opacity 0.1s; */
   }
