--- a/main.css
+++ b/main.css
@@ -178,8 +178,9 @@ a:hover {
 
   a,
   p {
-    letter-spacing: -0rem;
     font-size: 18px;
+    letter-spacing: 0.03rem;
+    line-height: 1.6rem;
     /* transition: opacity 0.3s; */
     /* -webkit-transition: opacity 0.1s; */
   }
