--- a/main.css
+++ b/main.css
@@ -62,10 +62,21 @@ p {
 
 a,
 p {
-  /* letter-spacing: -0.007rem; */
-  /* transition: opacity 0.2s;
-  -webkit-transition: opacity 0.2s; */
   color: white;
+}
+
+@media (hover: hover) {
+  .bio a {
+    color: rgb(34, 34, 34, 0);
+    text-decoration: none;
+    text-shadow: none;
+  }
+
+  .bio a:hover {
+    /* font-style: italic; */
+    color: white;
+    text-shadow: 1px 1px rgb(34, 34, 34);
+  }
 }
 
 a {
@@ -75,18 +86,6 @@ a {
   background-position: 0 1.2em;
   background-repeat: repeat-x;
   background-size: 4px 4px;
-  /* text-shadow: 2px 2px rgb(34, 34, 34, 0); */
-  text-shadow: 1px 1px rgb(34, 34, 34);
-}
-.bio a {
-  color: rgb(34, 34, 34, 0);
-  text-decoration: none;
-  text-shadow: none;
-}
-
-.bio a:hover {
-  /* font-style: italic; */
-  color: white;
   text-shadow: 1px 1px rgb(34, 34, 34);
 }
 
