--- a/main.css
+++ b/main.css
@@ -30,14 +30,13 @@ html {
   background-color: rgb(19, 19, 19);
   /* background: black; */
   background-size: cover;
-  min-width: 100vw;
-  min-height: 100vh;
+  height: 100%;
   z-index: -1;
 }
 
 body {
   min-height: 100vh;
-
+  height: 100%;
   background: linear-gradient(122.18deg, #1d1d1d 8.01%, #0c0c0c 95.95%);
 }
 
