--- a/main.css
+++ b/main.css
@@ -36,6 +36,7 @@ html {
 
 body {
   min-height: 100vh;
+  padding: 30px 30px 30px 30px;
   height: 100%;
   background: linear-gradient(122.18deg, #1d1d1d 8.01%, #0c0c0c 95.95%);
 }
@@ -51,8 +52,7 @@ body {
 }
 
 p {
-  padding: 30px 30px 30px 30px;
-  max-width: 600px;
+  max-width: 566px;
   font-size: 24px;
   cursor: default;
   animation: loadIn 0.5s forwards linear 0.4s;
@@ -138,20 +138,24 @@ a {
   /* transition: 1s; */
 }
 
-.footer {
-  bottom: 0;
-  right: 0;
-  position: fixed;
+footer {
+  position: absolute;
+  bottom: 30px;
+  right: 30px;
+  text-align: end;
+  font-size: 24px;
 }
 
-.footer a {
+footer a {
   text-decoration: none;
-  opacity: 0.1;
   background-image: none;
+  opacity: 10%;
+  display: block;
+  margin-top: 8px;
   /* transition: opacity 0.5s; */
 }
 
-.footer a:hover {
+footer a:hover {
   opacity: 1;
 }
 
