--- a/main.css
+++ b/main.css
@@ -6,7 +6,6 @@
   outline: 0;
   vertical-align: baseline;
   font-style: normal;
-  line-height: 1.8rem;
   /* letter-spacing: 0.1px; */
 
   -webkit-user-drag: none;
@@ -21,13 +20,12 @@
 
 html {
   /* text-rendering: optimizeLegibility; */
+  /* font-family: baskerville-urw, serif; */
   -webkit-font-smoothing: antialiased;
-  /* font-family: NBAkademie-Regular, sans-serif; */
 
-  font-family: baskerville-urw, serif;
-  /* overflow: hidden; */
-  /* background: rgb(17, 17, 17); */
-  background-color: rgb(19, 19, 19);
+  font-family: "DM Mono", monospace;
+
+  background-color: #111;
   /* background: black; */
   background-size: cover;
   height: 100%;
@@ -38,7 +36,8 @@ body {
   min-height: 100vh;
   padding: 30px 30px 30px 30px;
   height: 100%;
-  background: linear-gradient(122.18deg, #1d1d1d 8.01%, #0c0c0c 95.95%);
+  /* background: linear-gradient(122.18deg, #1d1d1d 8.01%, #0c0c0c 95.95%); */
+  background: #111;
 }
 
 ::selection {
@@ -52,8 +51,7 @@ body {
 }
 
 p {
-  max-width: 550px;
-  font-size: 24px;
+  max-width: 580px;
   cursor: default;
   animation: loadIn 0.5s forwards linear 0.4s;
   -webkit-animation: loadIn 0.5s forwards linear 0.4s;
@@ -65,6 +63,10 @@ p {
 a,
 p {
   color: white;
+  font-size: 18px;
+  letter-spacing: 0.3px;
+  line-height: 1.8rem;
+  /* text-transform: uppercase; */
 }
 
 @media (hover: hover) {
