--- a/main.css
+++ b/main.css
@@ -36,10 +36,10 @@ body {
   background: #111;
 }
 
-/* ::selection {
+::selection {
   color: none;
   background: none;
-} */
+}
 /* For Mozilla Firefox */
 ::-moz-selection {
   color: none;
@@ -47,7 +47,7 @@ body {
 }
 
 p {
-  max-width: 630px;
+  max-width: 613px;
   font-size: 29px;
   cursor: default;
   animation: loadIn 0.5s forwards linear 0.4s;
@@ -184,7 +184,6 @@ footer a:hover {
 @media (max-width: 450px) {
   html {
     overflow: visible;
-    min-height: 100vh;
   }
 
   body {
@@ -197,11 +196,6 @@ footer a:hover {
 
   .ball {
     display: none;
-  }
-
-  a:hover {
-    /* font-style: italic; */
-    opacity: 100%;
   }
 
   p {
@@ -220,13 +214,6 @@ footer a:hover {
   }
 
   footer {
-    bottom: 30px;
-    right: 16px;
-    position: fixed;
-  }
-
-  footer a {
-    font-size: 20px;
-    line-height: 1.8rem;
+    display: none;
   }
 }
