--- a/main.css
+++ b/main.css
@@ -57,13 +57,17 @@ p {
   max-width: 640px;
   font-size: 28px;
   cursor: default;
-  animation: loadIn 0.5s forwards linear 0.4s;
-  -webkit-animation: loadIn 0.5s forwards linear 0.4s;
-  opacity: 0;
   font-style: normal;
   font-weight: 500;
   font-style: normal;
   letter-spacing: 0px;
+}
+
+p,
+footer {
+  animation: loadIn 0.5s forwards linear 0.4s;
+  -webkit-animation: loadIn 0.5s forwards linear 0.4s;
+  opacity: 0;
 }
 
 a {
