--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ html {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
 
-  font-family: neue-haas-unica, -apple-system, BlinkMacSystemFont, "Segoe UI",
+  font-family: aktiv-grotesk, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: #111;
   background-size: cover;
