--- a/main.css
+++ b/main.css
@@ -27,14 +27,14 @@ html {
 
   font-family: aktiv-grotesk, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background: #111;
+  background: rgb(8, 8, 8);
+  /* background: rgb(10, 10, 10); */
   background-size: cover;
   z-index: -1;
 }
 
 body {
   padding: 60px 30px 30px 40px;
-  background: #111;
 }
 
 ::selection {
@@ -83,6 +83,29 @@ a {
 a:hover {
   border-bottom: 2px solid white;
   /* text-decoration: underline; */
+}
+
+video {
+  position: absolute;
+  /* display: none; */
+  opacity: 0;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: opacity 0.2s, transform 0.1s;
+  transform: scale(1);
+}
+
+/* .bio {
+  z-index: 5;
+} */
+
+.show {
+  opacity: 0.2;
+  transform: scale(1.02);
 }
 
 .wrap {
@@ -139,14 +162,14 @@ footer {
 }
 
 footer a {
-  opacity: 10%;
+  opacity: 15%;
   line-height: 1.9rem;
   margin-top: 8px;
   font-size: 23px;
 }
 
 footer div {
-  opacity: 10% !important;
+  opacity: 20%;
   color: white;
 }
 
@@ -180,6 +203,10 @@ footer a:hover {
 
   body {
     padding: 32px 16px 16px 16px;
+  }
+
+  video {
+    display: none;
   }
 
   .wrap {
