--- a/main.css
+++ b/main.css
@@ -230,7 +230,7 @@ footer div {
   p,
   a,
   span {
-    font-size: 21px;
+    font-size: 20px;
     letter-spacing: 0rem;
     line-height: 1.9rem;
   }
@@ -240,4 +240,11 @@ footer div {
     line-height: 1.8rem;
     opacity: 0.4;
   } */
+
+  footer {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    text-align: end;
+  }
 }
