--- a/main.css
+++ b/main.css
@@ -28,7 +28,6 @@ html {
   font-family: aktiv-grotesk, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: rgb(8, 8, 8);
-  /* background: rgb(10, 10, 10); */
   background-size: cover;
   overflow: hidden;
 }
@@ -56,6 +55,7 @@ span {
   font-style: normal;
   font-weight: 500;
   letter-spacing: 0px;
+  z-index: 1;
 }
 
 a {
@@ -72,38 +72,29 @@ p {
   cursor: default;
 }
 
-p,
-footer {
+.projects a {
+  margin-left: 30px;
+}
+
+/* .landing p {
   animation: loadIn 0.5s forwards linear 0.4s;
   -webkit-animation: loadIn 0.5s forwards linear 0.4s;
   opacity: 0;
-}
+} */
 
-footer a,
-span {
-  opacity: 15%;
-  line-height: 1.9rem;
-  /* margin-top: 8px;
-  font-size: 23px;
-  font-style: italic;
-  font-family: "Times", Times, serif;
-  text-decoration: none;
-  letter-spacing: -0.2px;
-  text-decoration: none; */
-}
-
-video {
+video,
+img {
   position: absolute;
-  /* display: none; */
   opacity: 0;
   top: 0;
   left: 0;
-  z-index: 0;
+  z-index: -1;
   width: 100%;
   height: 100%;
   object-fit: cover;
   transition: opacity 0.2s, transform 0.1s;
   transform: scale(1);
+  pointer-events: none;
 }
 
 .show {
@@ -143,16 +134,10 @@ video {
     perspective: 1000;
     transform: translate3d(0, 0, 0);
     transform: translateZ(0);
-    /* filter: blur(50px);
-  -webkit-filter: blur(50px); */
+
     transition: 0.3s transform;
     animation: ballLoadIn 0.5s forwards linear 0.8s;
     -webkit-animation: ballLoadIn 0.5s forwards linear 0.8s;
-  }
-
-  footer a:hover {
-    opacity: 1;
-    border: none;
   }
 }
 
@@ -161,10 +146,12 @@ video {
     overflow: visible;
   }
 
-  .other-video {
+  .thinkspace-video {
     animation: lowLoadIn 0.5s forwards linear 0.4s;
     -webkit-animation: lowLoadIn 0.5s forwards linear 0.4s;
     opacity: 0;
+    margin-left: 0;
+    object-position: 80%;
   }
 }
 
@@ -173,18 +160,6 @@ video {
   opacity: 100%;
   border: 3px solid rgba(255, 255, 255);
   transform: scale(0.8);
-}
-
-footer {
-  position: absolute;
-  bottom: 30px;
-  right: 30px;
-  text-align: end;
-}
-
-footer div {
-  opacity: 15%;
-  color: white;
 }
 
 @keyframes loadIn {
