--- a/main.css
+++ b/main.css
@@ -27,6 +27,7 @@ html {
 
   font-family: aktiv-grotesk, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
   background: rgb(8, 8, 8);
   background-size: cover;
   overflow: hidden;
@@ -50,12 +51,12 @@ a,
 p,
 span {
   color: white;
-  line-height: 2.2rem;
-  font-size: 26px;
+  line-height: 1.6rem;
+  font-size: 18px;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 400;
   letter-spacing: 0px;
-  z-index: 1;
+  z-index: 10;
 }
 
 a {
@@ -68,12 +69,12 @@ a:hover {
 }
 
 p {
-  max-width: 600px;
+  max-width: 500px;
   cursor: default;
 }
 
 .projects a {
-  margin-left: 30px;
+  margin-left: 15px;
 }
 
 /* .landing p {
@@ -191,7 +192,7 @@ img {
 
 @media (max-width: 450px) {
   body {
-    padding: 32px 16px 16px 16px;
+    padding: 32px 14px 14px 14px;
   }
 
   .wrap {
@@ -201,14 +202,14 @@ img {
   .ball {
     display: none;
   }
-
+  /* 
   p,
   a,
   span {
     font-size: 21px;
     letter-spacing: 0rem;
     line-height: 1.9rem;
-  }
+  } */
 
   /* footer a {
     font-size: 20px;
@@ -216,10 +217,10 @@ img {
     opacity: 0.4;
   } */
 
-  footer {
+  /* footer {
     position: absolute;
     bottom: 20px;
     right: 20px;
     text-align: end;
-  }
+  } */
 }
