--- a/main.css
+++ b/main.css
@@ -39,7 +39,7 @@ body {
 
 footer {
   position: absolute;
-  left: 55px;
+  left: 40px;
   bottom: 30px;
   cursor: default;
 }
@@ -62,7 +62,7 @@ span {
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
-  letter-spacing: 0px;
+  letter-spacing: 0rem;
   z-index: 10;
 }
 
@@ -87,7 +87,7 @@ p {
   max-width: 540px;
 }
 
-.projects a {
+.indent a {
   margin-left: 15px;
 }
 
@@ -218,7 +218,7 @@ img {
   }
 
   footer {
-    left: 29px;
+    left: 14px;
     bottom: 20px;
   }
 }
