--- a/main.css
+++ b/main.css
@@ -28,7 +28,7 @@ html {
   font-family: aktiv-grotesk, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
-  background: rgb(8, 8, 8);
+  background: rgba(8, 8, 8, 1);
   background-size: cover;
 }
 
