new copy change

--- a/main.css
+++ b/main.css
@@ -222,7 +222,7 @@ img {
     left: 14px;
     position: static;
     margin-top: 0px;
-    margin-bottom: 25px;
+    padding-bottom: 25px;
     /* bottom: 20px; */
   }
 
