--- a/main.css
+++ b/main.css
@@ -74,18 +74,6 @@ body {
   grid-template-columns: 1fr 1fr;
 }
 
-@media (max-width: 800px) {
-  .row {
-    grid-template-columns: 1fr;
-    row-gap: 15px;
-    max-width: 510px;
-  }
-
-  .landing {
-    grid-template-columns: 1fr;
-  }
-}
-
 ::selection {
   color: none;
   background: none;
@@ -217,6 +205,23 @@ img {
     column-gap: 10px;
   }
 }
+
+@media (max-width: 800px) {
+  .row {
+    grid-template-columns: 1fr;
+    row-gap: 15px;
+    max-width: 510px;
+  }
+
+  .landing {
+    grid-template-columns: 1fr;
+  }
+
+  .media {
+    display: none;
+  }
+}
+
 @media (max-width: 450px) {
   .landing {
     padding: 32px 14px 14px 14px;
