--- a/main.css
+++ b/main.css
@@ -251,8 +251,8 @@ img {
   a,
   p,
   span {
-    line-height: 1.6rem;
-    font-size: 17px;
-    letter-spacing: 0rem;
+    line-height: 1.5em;
+    font-size: 16px;
+    letter-spacing: 0em;
   }
 }
