--- a/main.css
+++ b/main.css
@@ -161,6 +161,7 @@ img {
   object-fit: cover;
   border-radius: 2px;
   box-shadow: 0 0 100px rgba(0, 0, 0, 0.1);
+  max-height: 90vh;
 }
 
 .hoverCard p {
