--- a/main.css
+++ b/main.css
@@ -25,8 +25,9 @@ html {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
 
-  font-family: aktiv-grotesk, -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: neue-haas-unica, aktiv-grotesk, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
 
   background: white;
   background-size: cover;
@@ -104,13 +105,11 @@ span {
 a {
   text-decoration: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  transition: background-color 0.1s;
-  background: rgba(245, 245, 245, 0);
 }
 
 a:hover {
-  opacity: 1;
-  background: rgba(245, 245, 245);
+  opacity: 0.6;
+  /* background: rgba(0, 0, 0, 0.03); */
 }
 
 p {
@@ -159,7 +158,6 @@ img {
   width: 100%;
   height: auto;
   object-fit: cover;
-  border-radius: 2px;
   box-shadow: 0 0 100px rgba(0, 0, 0, 0.1);
   max-height: 90vh;
 }
@@ -168,6 +166,7 @@ img {
   margin-top: 5px;
   font-size: 15px;
   opacity: 0.5;
+  letter-spacing: 0.003em;
 }
 
 .showHoverCard {
