--- a/main.css
+++ b/main.css
@@ -153,8 +153,8 @@ img {
   transition: 0.1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
-.hoverCard video,
-.hoverCard img {
+video,
+img {
   width: 100%;
   height: auto;
   object-fit: cover;
