--- a/main.css
+++ b/main.css
@@ -153,7 +153,7 @@ img {
 .portrait {
   width: 100%;
   max-width: 1000px;
-  height: 100%;
+  height: auto;
   position: absolute;
   z-index: 100 !important;
   pointer-events: none;
