--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@ html {
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
 
-  background: white;
+  background: rgba(255, 255, 255, 1);
   background-size: cover;
 }
 
